# AscendSpeed

./: .gitignore  LICENSE  OWNERS  README.md  README_en.md  pretrain_baichuan.py  pretrain_bloom.py  pretrain_gpt.py  pretrain_intern.py  pretrain_llama.py  pretrain_llama2.py  requirements.txt  setup.py  torch_trans.py
speed_infer/: CMakeLists.txt  README.md
speed_infer/core/: CMakeLists.txt
speed_infer/core/base/: handle.cpp  model.cpp
speed_infer/core/context/: buffer_base.cpp  buffer_base.h  buffer_device.cpp  buffer_device.h  buffer_host.cpp  buffer_host.h  context.cpp  context.h
speed_infer/core/include/atb_speed/: log.h
speed_infer/core/include/atb_speed/base/: handle.h  hosttensor_binder.h  model.h  model_creator.h
speed_infer/core/include/atb_speed/log/: log_core.h  log_entity.h  log_sink.h  log_sink_file.h  log_sink_stdout.h  log_stream.h
speed_infer/core/include/atb_speed/utils/: config.h  filesystem.h  match.h  singleton.h  statistic.h  str_split.h  tensor_util.h  timer.h
speed_infer/core/log/: log_core.cpp  log_entity.cpp  log_sink.cpp  log_sink_file.cpp  log_sink_stdout.cpp  log_stream.cpp
speed_infer/core/utils/: config.cpp  filesystem.cpp  match.cpp  statistic.cpp  str_split.cpp  tensor_util.cpp  timer.cpp
speed_infer/layers/: CMakeLists.txt  Readme.md  attention.cpp  attention.h  common.h  mlp.cpp  mlp.h  mlp_gate.cpp  mlp_gate.h  mlp_gate_v2.cpp  mlp_gate_v2.h  parallel_layer.cpp  parallel_layer.h  parallel_layer_v2.cpp  parallel_layer_v2.h  parallel_lmhead.cpp  parallel_lmhead.h
speed_infer/models/: CMakeLists.txt
speed_infer/models/llama/13b/layer/: decoder_parallel_layer.cpp  decoder_parallel_layer_fa.cpp  decoder_parallel_layer_fa.h  decoder_parallel_layer_rope.cpp  encoder_parallel_layer.cpp  encoder_parallel_layer_rope.cpp  parallel_layer.h  quant_decoder_parallel_layer_fa.cpp  quant_decoder_parallel_layer_fa.h
speed_infer/models/llama/7b/layer/: decoder_layer.cpp  encoder_layer.cpp  layer.h  layer_flashattention.cpp  layer_flashattention.h  layer_fusion.cpp  layer_fusion.h  rope_decoder_layer.cpp
speed_infer/models/llama/7b/model/: decoder_rope_model.cpp  decoder_without_fusion_model.cpp  decoder_without_fusion_model.h  encoder_rope_model.cpp  encoder_rope_model_emb.cpp  encoder_without_fusion_model.cpp  encoder_without_fusion_model.h  flashattention_model.cpp  flashattention_model.h  fusion_model.cpp  fusion_model.h  quant_flashattention_model.cpp  quant_flashattention_model.h  rope_model.h
speed_infer/models/llama/7b/operation/: common_mlp.cpp  common_mlp.h  fusion_mlp.cpp  fusion_mlp.h  position_embedding.cpp  position_embedding.h  position_embedding_fusion.cpp  position_embedding_fusion.h  rope_fusion_operation.cpp  rope_fusion_operation.h  self_attention.cpp  (+2 more)
speed_infer/models/llama_pa/layer/: pa_layer.cpp  pa_layer.h
speed_infer/models/llama_pa/model/: pa_model.cpp  pa_model.h
speed_infer/models/llama_parallel/layer/: llamalayer_encoder_parallel_operation.cpp  llamalayer_encoder_parallel_operation.h  llamalayer_fusion_parallel_operation.cpp  llamalayer_fusion_parallel_operation.h  llamalayer_mlp.cpp  llamalayer_mlp.h  llamalayer_multi_layer_linear.cpp  llamalayer_multi_layer_linear.h
speed_infer/models/llama_parallel/operation/: llama_position_embedding_1d_split_fusion_operation.cpp  llama_position_embedding_1d_split_fusion_operation.h  llama_position_embedding_1d_split_operation.cpp  llama_position_embedding_1d_split_operation.h  llama_self_attention_operation.cpp  llama_self_attention_operation.h
speed_infer/pytorch/: CMakeLists.txt
speed_infer/pytorch/adapter/: CMakeLists.txt
speed_infer/pytorch/adapter/model/: model_torch.cpp  model_torch.h
speed_infer/pytorch/adapter/operation/: operation_creator.cpp  operation_creator.h  operation_torch.cpp  operation_torch.h
speed_infer/pytorch/adapter/utils/: utils.cpp  utils.h
speed_infer/pytorch/examples/llama_parallel/: cut_model_and_run_llama.sh  cut_model_util.py  cut_quant_model_util.py  kill.sh  modeling_llama_parallel.py  modeling_llama_parallel_cut.py  modeling_llama_parallel_without_fusion.py  quantize_llama_weight.py  readme.md  requirements.txt  run.sh  run_llama_parallel_performance.py
speed_infer/scripts/: build.sh  get_cxx11_abi_flag.py  set_env.sh
speed_infer/tools/: CMakeLists.txt
speed_infer/tools/hello/: CMakeLists.txt  main.cpp
speed_infer/tools/python_tools/: tensor_compare.py  tensor_convert.py  tensor_file.py  tensor_view.py
(+382 files in other folders)
